# Algorithmic-Forex-Bot

./: .env  DEPLOYMENT.md  Dockerfile  README.md  USER_GUIDE.md  chat_cli.py  check_volume.py  cli-prompt.md  cli.py  docker-compose.yml  entrypoint.sh  environment.yml  fly.toml  main.py  next-step.md  predict.py  pyproject.toml  render.yaml  reproduce_issue.py  requirements.txt  run_agent.py  telegram_bot.py  test.py  test_forex.py  train_model.py  visualize_prediction.py
agents/: __init__.py  base_agent.py  chat_agent.py  chief_investment_officer.py  fundamentals_analyst.py  market_data_analyst.py  portfolio_manager.py  prediction_logger.py  quant_analyst.py  registry.py  retrainer.py  risk_manager.py  sentiment_analyst.py
backtest/: backtest_engine.py
data/: db_manager.py  market_data.db
docs/: USER_GUIDE.md  ai_hedge_fund_implementation_plan.md  algo_trading_project_context.md  features.md
live_trading/: trader.py
models/: ^vix_1h_model.pkl  ^vix_1h_scaler.pkl  aapl_1h_model.pkl  aapl_1h_scaler.pkl  ada-usd_1h_model.pkl  ada-usd_1h_scaler.pkl  amd_1h_model.pkl  amd_1h_scaler.pkl  amzn_1h_model.pkl  amzn_1h_scaler.pkl  audjpy_x_1h_model.pkl  audjpy_x_1h_scaler.pkl  audusd_x_1h_model.pkl  audusd_x_1h_scaler.pkl  avax-usd_1h_model.pkl  avax-usd_1h_scaler.pkl  bnb-usd_1h_model.pkl  bnb-usd_1h_scaler.pkl  btc-usd_1h_model.pkl  btc-usd_1h_scaler.pkl  btc-usd_model.pkl  btc-usd_scaler.pkl  btc_model.pkl  btc_scaler.pkl  cl_f_1h_model.pkl  cl_f_1h_scaler.pkl  dia_1h_model.pkl  dia_1h_scaler.pkl  doge-usd_1h_model.pkl  doge-usd_1h_scaler.pkl  dot-usd_1h_model.pkl  (+89 more)
(+22 files in other folders)
