[project]
name = "algo-trader"
version = "0.1.0"
description = "AI-powered algorithmic trading bot with multi-agent analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "yfinance>=0.2.18",
    "python-dotenv>=1.0.0",
    "ta-lib>=0.4.28",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "questionary>=2.0.0",
    "schedule>=1.2.0",
    "vadersentiment>=3.3.0",
    "groq>=0.5.0",
    "requests>=2.31.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "python-telegram-bot>=20.6",
    "httpx>=0.25.0",
]

[dependency-groups]
dev = []
